syntax = "proto3";

package task;

service TaskService {
    rpc Create(Task) returns (Task);
    rpc Get(ByIdReq) returns (Task);
    rpc List(ListReq) returns (ListResp);
    rpc Update(Task) returns (Task);
    rpc Delete(ByIdReq) returns (EmptyRes);
    rpc Overdue(OverdueReq) returns (OverdueResp);
}

message Task {
    int64  id = 1;
    string assignee = 2;
    string title = 3;
    string summary = 4;
    string deadline = 5;
    string status = 6;
}

message ByIdReq {
    int64 id = 1;
}

message ListReq {
    int64 page = 1;
    int64 limit = 2;
}

message ListResp {
    repeated Task tasks = 1;
    int64 count = 2;
}

message EmptyRes {}

message OverdueResp {
    repeated Task overres = 1;
    int64 count = 2;
}

message OverdueReq {
    string timed = 1;
    int64 page = 2;
    int64 limit = 3;
}